--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+asn1crypto==0.24.0
+backports.functools-lru-cache==1.5
+certifi==2019.9.11
+chardet==3.0.4
 coverage==4.0
+cryptography==2.1.4
 Django==1.8.6
 django-auth-ldap-ng==1.5.0
 django-braces==1.8.1
@@ -8,18 +13,37 @@ django-oauth-toolkit==0.9.0
 django-recaptcha==1.0.4
 django-simple-history==1.6.3
 djangorestframework==3.3.0
+enum34==1.1.6
 funcsigs==0.4
+futures==3.2.0
 gevent==1.0.2
 greenlet==0.4.9
 gunicorn==19.3.0
+httplib2==0.14.0
+idna==2.6
+ipaddress==1.0.17
 isort==4.2.2
+keyring==10.6.0
+keyrings.alt==3.0
 mock==1.3.0
-oauthlib==1.0.1
+oauthlib==3.1.0
 pbr==1.8.1
 Pillow==2.9.0
-psycopg2
+psycopg2==2.8.2
+pyasn1==0.4.7
+pyasn1-modules==0.2.6
+pycrypto==2.6.1
+pygobject==3.26.1
+PyJWT==1.7.1
 python-ldap==2.4.21
 python-memcached==1.57
-six==1.9.0
-wheel==0.24.0
-
+python-openid==2.2.5
+pytz==2019.1
+pyxdg==0.25
+requests==2.22.0
+requests-oauthlib==1.2.0
+rsa==4.0
+SecretStorage==2.3.1
+six==1.12.0
+social-auth-core==3.2.0
+urllib3==1.25.6
