Update httpd config

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,22 +1,22 @@
 # WSGI Root
-WSGIPythonPath /var/www/sso
+WSGIPythonPath /var/www/profiles
 
 <VirtualHost *:80>
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/sso/staticfiles/
+	DocumentRoot /var/www/profiles/staticfiles/
 
 	# Upstream OIDC configuration
 	OIDCProviderMetadataURL https://sso-uat.iitb.ac.in/.well-known/openid-configuration
         OIDCScope "openid"
         OIDCClientID gymkhana
         OIDCClientSecret secret
-        OIDCRedirectURI https://gymkhana.iitb.ac.in/sso/oauth/authorize/uredir
+        OIDCRedirectURI https://gymkhana.iitb.ac.in/profiles/oauth/authorize/uredir
         OIDCCryptoPassphrase something
 	OIDCRemoteUserClaim uid
 	OIDCSessionInactivityTimeout 10
 	OIDCSessionMaxDuration 15
 
-	WSGIScriptAlias /sso /var/www/sso//sso/wsgi.py
+	WSGIScriptAlias /profiles /var/www/profiles//profiles/wsgi.py
 	WSGIPassAuthorization On
 
 	# WSGI files
@@ -25,7 +25,7 @@ WSGIPythonPath /var/www/sso
 	</Directory>
 
 	# Authorize API with upstream OIDC
-	<Location "/sso/oauth/authorize">
+	<Location "/profiles/oauth/authorize">
 		AuthType openid-connect
 		Require valid-user
 	</Location>
@@ -35,8 +35,8 @@ WSGIPythonPath /var/www/sso
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 	# Static files
-	Alias "/sso/static/" "/var/www/sso/staticfiles/"
-	Alias "/sso/media/" "/var/www/sso/media/"
+	Alias "/profiles/static/" "/var/www/profiles/staticfiles/"
+	Alias "/profiles/media/" "/var/www/profiles/media/"
 	
 	Options -Indexes
 </VirtualHost>
