--- a/httpd.conf
+++ b/httpd.conf
@@ -1,43 +1,48 @@
 # WSGI Root
-WSGIPythonPath /var/www/profiles
+WSGIPythonPath /var/www/ldap-oauth2
+WSGIPythonHome /var/www/venv
 
 <VirtualHost *:80>
-	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/profiles/staticfiles/
+	ServerAdmin mlc@iitb.ac.in
+	DocumentRoot /var/www/ldap-oauth2/staticfiles/
 
-	# Upstream OIDC configuration
-	OIDCProviderMetadataURL https://sso-uat.iitb.ac.in/.well-known/openid-configuration
-        OIDCScope "openid"
-        OIDCClientID gymkhana
-        OIDCClientSecret secret
-        OIDCRedirectURI https://gymkhana.iitb.ac.in/profiles/oauth/authorize/uredir
-        OIDCCryptoPassphrase something
-	OIDCRemoteUserClaim uid
-	OIDCSessionInactivityTimeout 10
-	OIDCSessionMaxDuration 15
-
-	WSGIScriptAlias /profiles /var/www/profiles//profiles/wsgi.py
-	WSGIPassAuthorization On
-
-	# WSGI files
-	<Directory /root/ldap-oauth2>
-		Require all granted
-	</Directory>
-
-	# Authorize API with upstream OIDC
-	<Location "/profiles/oauth/authorize">
-		AuthType openid-connect
-		Require valid-user
-	</Location>
-
-	# Logging
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
+	<Directory /var/www/ldap-oauth2>
+		Require all granted
+	</Directory>
+
 	# Static files
-	Alias "/profiles/static/" "/var/www/profiles/staticfiles/"
-	Alias "/profiles/media/" "/var/www/profiles/media/"
-	
+	Alias "/profiles/static/" "/var/www/ldap-oauth2/staticfiles/"
+	Alias "/profiles/media/" "/var/www/ldap-oauth2/media/"
+
+	WSGIScriptAlias /sso /var/www/ldap-oauth2/sso/wsgi.py
+	WSGIScriptAlias /profiles /var/www/ldap-oauth2/sso/wsgi.py
+	WSGIPassAuthorization On
+
+	<LocationMatch /profiles/(user|oauth/applications|oauth/authorize|account/logout)(?!/api) >
+		AuthType form
+		AuthName LDAP
+		ErrorDocument 401 /profiles/account/login/
+		AuthFormProvider ldap
+		AuthFormLoginSuccessLocation %{REQUEST_URI}
+		AuthFormLogoutLocation "/profiles/user/"
+
+		Session On
+		SessionCookieName psession path=/profiles/
+		SessionCryptoPassphrase secret
+
+		LDAPReferrals Off
+		AuthLDAPUrl ldap://ldap.iitb.ac.in/dc=iitb,dc=ac,dc=in?uid,employeeNumber,employeeType,mobile,givenName,sn,mail?sub?(objectClass=*)
+		Require valid-user
+	</LocationMatch>
+
+	<Location "/profiles/account/logout" >
+		SetHandler form-logout-handler
+		SessionMaxAge 1
+	</Location>
+
 	Options -Indexes
 </VirtualHost>
 
