Add admin to auth routes

--- a/httpd.conf
+++ b/httpd.conf
@@ -21,7 +21,7 @@ WSGIPythonHome /var/www/venv
 	WSGIScriptAlias /profiles /var/www/ldap-oauth2/sso/wsgi.py
 	WSGIPassAuthorization On
 
-	<LocationMatch /profiles/(user|oauth/applications|oauth/authorize|account/logout)(?!/api) >
+	<LocationMatch /profiles/(user|oauth/applications|oauth/authorize|account/logout|admin)(?!/api) >
 		AuthType form
 		AuthName LDAP
 		ErrorDocument 401 /profiles/account/login/
