Preserve query string after login

--- a/httpd.conf
+++ b/httpd.conf
@@ -26,7 +26,7 @@ WSGIPythonHome /var/www/venv
 		AuthName LDAP
 		ErrorDocument 401 /profiles/account/login/
 		AuthFormProvider ldap
-		AuthFormLoginSuccessLocation %{REQUEST_URI}
+		AuthFormLoginSuccessLocation "%{REQUEST_URI}?%{QUERY_STRING}"
 		AuthFormLogoutLocation "/profiles/user/"
 
 		Session On
