Fix for OIDC upstream

--- a/httpd.conf
+++ b/httpd.conf
@@ -21,7 +21,21 @@ WSGIPythonHome /var/www/venv
 	WSGIScriptAlias /profiles /var/www/ldap-oauth2/sso/wsgi.py
 	WSGIPassAuthorization On
 
+	# ============== OIDC ONLY ==================
+	# OIDCProviderMetadataURL https://sso-uat.iitb.ac.in/.well-known/openid-configuration
+	# OIDCScope "openid"
+	# OIDCClientID gymkhana
+	# OIDCClientSecret the_middle_layer_secret
+	# OIDCRedirectURI https://gymkhana.iitb.ac.in/profiles/user/redir
+	# OIDCCryptoPassphrase openstack
+	# OIDCSSLValidateServer Off
+	# OIDCRemoteUserClaim uid
+	# OIDCCookiePath "/profiles/"
+	# OIDCSessionMaxDuration 600
+	# ===========================================
+
 	<LocationMatch /profiles/(user|oauth/applications|oauth/authorize|account/logout|admin)(?!/api) >
+		# ============== LDAP ONLY ==================
 		AuthType form
 		AuthName LDAP
 		ErrorDocument 401 /profiles/account/login/
@@ -35,13 +49,21 @@ WSGIPythonHome /var/www/venv
 
 		LDAPReferrals Off
 		AuthLDAPUrl ldap://ldap.iitb.ac.in/dc=iitb,dc=ac,dc=in?uid,employeeNumber,employeeType,mobile,givenName,sn,mail?sub?(objectClass=*)
+		# ===========================================
+
+		# ============== OIDC ONLY ==================
+		# AuthType openid-connect
+		# ===========================================
+
 		Require valid-user
 	</LocationMatch>
 
+	# ============== LDAP ONLY ==================
 	<Location "/profiles/account/logout" >
 		SetHandler form-logout-handler
 		SessionMaxAge 1
 	</Location>
+	# ===========================================
 
 	Options -Indexes
 </VirtualHost>
